# courses.ml_zoomcamp

./: .gitignore  README.md  pyproject.toml
01-Introduction/: homework.ipynb  homework_1.ipynb
02 - regression/: 02-carprice.ipynb  homework_2.ipynb
