[project]
name = ""
version = ""
description = ""
authors = [
    {name = "sersavsnz", email = "spsavin@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8, <3.12"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=3.4.7",
    "seaborn>=0.12.0",
    "matplotlib>=3.6.0",
    "pandas>=1.4.4",
    "scipy>=1.9.1",
    "scikit-learn>=1.1.2",
]
